--- a/async js/spy-cite/package.json
+++ b/async js/spy-cite/package.json
@@ -11,6 +11,7 @@
   "author": "Hald",
   "license": "ISC",
   "dependencies": {
+    "fs": "^0.0.1-security",
     "http": "^0.0.1-security"
   }
 }
