--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Yatzy_Node_V2/node_modules/
 spy-cite/node_modules/
 tcp_webserver/node_modules/
 NodeWebBac/node_modules/
+NodeWebBOVS/node_modules/
